# swagger.yaml
@@ -115,6 +115,42 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  '/user/find/{googleId}':
+    get:
+      operationId: getUserByGoogleId
+      tags:
+        - user
+      parameters:
+        - name: googleId
+          in: path
+          description: google id
+          required: true
+          schema:
+            type: string
+
+      responses:
+        '200':
+          description: A successful response with user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+
+        '204':
+          description: No matching User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+
   '/posts':
     get:
       operationId: getAllPosts
